Cau hinh MassTransit, Them Consumer , va cap nhat Repository RabbitMQ InssuranceType

--- a/CoNhungNgayMicroservice/appsettings.json
+++ b/CoNhungNgayMicroservice/appsettings.json
@@ -13,7 +13,8 @@
   "MongoDBSettings": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "InsuranceDB",
-    "CustomerCollectionName": "Customer"
+    "CustomerCollectionName": "Customer",
+    "InsuranceTypeCollectionName": "InsuranceType"
   }
 }
 //Nếu bạn không cấu hình CustomerCollectionName trong docker-compose.yml, .NET sẽ lấy giá trị "mặc định" từ file appsettings.json.
