--- a/MongoDBCore/MongoDBCore.csproj
+++ b/MongoDBCore/MongoDBCore.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.7" />
     <PackageReference Include="MongoDB.Bson" Version="3.5.2" />
     <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
+    <PackageReference Include="Polly" Version="8.6.5" />
   </ItemGroup>
 
 </Project>
