Agent Asyn Oracle MongoDb RabbitMQ READ/Write

--- a/CoNhungNgayMicroservice/appsettings.json
+++ b/CoNhungNgayMicroservice/appsettings.json
@@ -14,7 +14,8 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "InsuranceDB",
     "CustomerCollectionName": "Customer",
-    "InsuranceTypeCollectionName": "InsuranceType"
+    "InsuranceTypeCollectionName": "InsuranceType",
+    "AgentCollectionName": "Agents"
   }
 }
 //Nếu bạn không cấu hình CustomerCollectionName trong docker-compose.yml, .NET sẽ lấy giá trị "mặc định" từ file appsettings.json.
