--- a/MongoDBCore/MongoDBCore.csproj
+++ b/MongoDBCore/MongoDBCore.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Entities\Models\DTOs\" />
     <Folder Include="Settings\" />
   </ItemGroup>
 
@@ -16,6 +17,10 @@
     <PackageReference Include="MongoDB.Bson" Version="3.5.2" />
     <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
     <PackageReference Include="Polly" Version="8.6.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Shared.Contracts\Shared.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
