Async Oracle-MongoDb, CancelPolicy+RenewPolicy

--- a/CoNhungNgayMicroservice/appsettings.json
+++ b/CoNhungNgayMicroservice/appsettings.json
@@ -15,7 +15,8 @@
     "DatabaseName": "InsuranceDB",
     "CustomerCollectionName": "Customer",
     "InsuranceTypeCollectionName": "InsuranceType",
-    "AgentCollectionName": "Agents"
+    "AgentCollectionName": "Agents",
+    "PolicyCollectionName": "Policy"
   }
 }
 //Nếu bạn không cấu hình CustomerCollectionName trong docker-compose.yml, .NET sẽ lấy giá trị "mặc định" từ file appsettings.json.
