--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - MongoDBSettings__CustomerCollectionName=Customers
       - MongoDBSettings__InsuranceTypeCollectionName=InsuranceTypes # Thêm dòng này
       - MongoDBSettings__AgentCollectionName=Agents # Thêm dòng này
+      - MongoDBSettings__PolicyCollectionName=Policy # Thêm dòng này
 
       # ===== ORACLE =====
       - ConnectionStrings__OracleDbConnection=User Id=INSURANCE_USER;Password=mypassword123;Data Source=oracle:1521/XEPDB1 #dùng oracle thay vì localhost? Vì trong mạng Docker (networks: backend), các container gọi nhau bằng Tên Service.
