Chinh thuc trien khai CI/CD va xu ly Unacked

--- a/CoNhungNgayMicroservice/appsettings.json
+++ b/CoNhungNgayMicroservice/appsettings.json
@@ -19,6 +19,7 @@
     "PolicyCollectionName": "Policy"
   }
 }
+//chua cau hinh RabbitMq tren local
 //Nếu bạn không cấu hình CustomerCollectionName trong docker-compose.yml, .NET sẽ lấy giá trị "mặc định" từ file appsettings.json.
 // Lúc nào docker cũng độ ưu tiên cao hơn , và khi các tham số trong docker bỏ trống mà trong appsetting có thì sẽ lấy tham số đó của appsetting
 //Nếu docker-compose có ConnectionString, nó sẽ đè lên cái localhost.
