Integration CI/CD unit test Producer Oracle

--- a/Insurance.Tests/Insurance.Tests.csproj
+++ b/Insurance.Tests/Insurance.Tests.csproj
@@ -23,6 +23,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\MongoDBCore\MongoDBCore.csproj" />
+		<ProjectReference Include="..\OracleSQLCore\OracleSQLCore.csproj" />
 		<ProjectReference Include="..\Shared.Contracts\Shared.Contracts.csproj" />
 	</ItemGroup>
 </Project>
