--- a/CoNhungNgayMicroservice/CoNhungNgayMicroservice.csproj
+++ b/CoNhungNgayMicroservice/CoNhungNgayMicroservice.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.MongoDb" Version="9.0.0" />
     <PackageReference Include="AspNetCore.HealthChecks.Oracle" Version="9.0.0" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.76.0" />
+    <PackageReference Include="HotChocolate.AspNetCore" Version="15.1.11" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="10.0.1" />
     <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.1" />
@@ -18,5 +20,9 @@
     <ProjectReference Include="..\MongoDBCore\MongoDBCore.csproj" />
     <ProjectReference Include="..\OracleSQLCore\OracleSQLCore.csproj" />
   </ItemGroup>
+
+    <ItemGroup>
+	    <Protobuf Include="Protos\policy.proto" GrpcServices="Server" />
+    </ItemGroup>
 
 </Project>
