feat: implement automated policy expiration check and email notification flow

--- a/CoNhungNgayMicroservice/appsettings.json
+++ b/CoNhungNgayMicroservice/appsettings.json
@@ -17,6 +17,12 @@
     "InsuranceTypeCollectionName": "InsuranceType",
     "AgentCollectionName": "Agents",
     "PolicyCollectionName": "Policy"
+  },
+  "EmailSettings": { // Khi chạy trong Docker, biến môi trường - EmailSettings__SmtpServer=mailhog trong file compose sẽ tự động đè lên chữ localhost này.
+    "SmtpServer": "localhost",
+    "SmtpPort": 1025,
+    "SenderName": "Bao Hiem Co Nhung Ngay",
+    "SenderEmail": "no-reply@conhungngay.com"
   }
 }
 //chua cau hinh RabbitMq tren local
