feat: integrate automated agent commission calculation logic, active trigger call procedure

--- a/CoNhungNgayMicroservice/appsettings.json
+++ b/CoNhungNgayMicroservice/appsettings.json
@@ -16,7 +16,8 @@
     "CustomerCollectionName": "Customer",
     "InsuranceTypeCollectionName": "InsuranceType",
     "AgentCollectionName": "Agents",
-    "PolicyCollectionName": "Policy"
+    "PolicyCollectionName": "Policy",
+    "CommissionsCollectionName": "Commissions"
   },
   "EmailSettings": { // Khi chạy trong Docker, biến môi trường - EmailSettings__SmtpServer=mailhog trong file compose sẽ tự động đè lên chữ localhost này.
     "SmtpServer": "localhost",
