integration API Management Asyn MongoDB, GetById redis

--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -33,4 +33,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/mongo-consumer:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/insurance:latest
