--- a/CoNhungNgayMicroservice/appsettings.json
+++ b/CoNhungNgayMicroservice/appsettings.json
@@ -17,7 +17,8 @@
     "InsuranceTypeCollectionName": "InsuranceType",
     "AgentCollectionName": "Agents",
     "PolicyCollectionName": "Policy",
-    "CommissionsCollectionName": "Commissions"
+    "CommissionsCollectionName": "Commissions",
+    "ClaimsCollectionName": "Claims"
   },
   "EmailSettings": { // Khi chạy trong Docker, biến môi trường - EmailSettings__SmtpServer=mailhog trong file compose sẽ tự động đè lên chữ localhost này.
     "SmtpServer": "localhost",
