--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: "3.9"
 
 services:
   api:
-    # --- ĐÃ SỬA: Lấy image từ Docker Hub thay vì build tại chỗ ---
+    build:
+      context: .
+      dockerfile: Dockerfile
     image: hoangnamdang/insurance:latest
     container_name: conhungngay-api
     ports:
@@ -93,6 +95,7 @@ services:
       - ORACLE_PASSWORD=mypassword123
     volumes:
       - oracle_data:/opt/oracle/oradata
+      - ./init-db:/container-entrypoint-initdb.d
     healthcheck:
       test: ["CMD-SHELL", "echo \"SELECT 1 FROM DUAL;\" | sqlplus -s system/mypassword123@//localhost:1521/XEPDB1"]
       interval: 20s
