Fetch: integration SignR + Websocket

--- a/CoNhungNgayMicroservice/appsettings.json
+++ b/CoNhungNgayMicroservice/appsettings.json
@@ -18,7 +18,8 @@
     "AgentCollectionName": "Agents",
     "PolicyCollectionName": "Policy",
     "CommissionsCollectionName": "Commissions",
-    "ClaimsCollectionName": "Claims"
+    "ClaimsCollectionName": "Claims",
+    "PaymentsCollectionName": "Payments"
   },
   "EmailSettings": { // Khi chạy trong Docker, biến môi trường - EmailSettings__SmtpServer=mailhog trong file compose sẽ tự động đè lên chữ localhost này.
     "SmtpServer": "localhost",
